--- a/src/app/components/logos/logos.component.html
+++ b/src/app/components/logos/logos.component.html
@@ -1,7 +1,8 @@
 <div class="row">
     <div class="box" id="divIngreso">
         <!--<div class="row col-12 col-lg-10 col-xl-10"></div>-->
-        <button type="button" class="btn btn-outline-light" id="btnIngreso" (click)="login()">Ingreso</button>
+        <button type="button" class="btn btn-outline-light" id="btnIngreso" (click)="login()" *ngIf="!isLogged">INGRESO</button>
+        <button type="button" class="btn btn-outline-light" id="btnIngreso" (click)="onLogOut()" *ngIf="isLogged">CERRAR SESIÓN</button>
         
     </div>
 </div>
