--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,3 +1,9 @@
-<div class="row col-12">
-    <img src="../../../assets/logos/banner.jfif">
+<div id="banner" class="row">
+    <!--<img src="../../../assets/logos/bandera.jfif"  id="banner">-->
+    <div class="row" id="cajaFoto">
+        <!--img src="../../../assets/logos/perfil.jpg" id="fotoPerfil"-->
+        <img src={{persona.url}} id="fotoPerfil">
+    </div>
+    
+    
 </div>
