--- a/src/app/components/acerca-de/acerca-de.component.css
+++ b/src/app/components/acerca-de/acerca-de.component.css
@@ -1,20 +1,21 @@
-div{
-    background-color: deepskyblue;
+div{    
     text-align: center;
 }
 
 #nombre{
     font-weight: bold ;
     font-size:2em;
-    margin-top: 1em;
+}
+
+#acerca{
+    font-weight: bold ;
+    font-size:2em;
+    
 }
 
 #descripcion{
-    font-weight: bold ;
-    font-size:2em;
-    margin-top: 1em;
+    text-indent: 2em;
 }
-
 #cajaFoto{
     display: flex;
     flex-direction: row;
@@ -22,28 +23,51 @@ div{
     align-items: center;
 }
 
-#fotoPerfil{
-    border-radius: 50%;
-    box-shadow: 3px 3px 10px black;
-    max-width: 80%;
-    margin-top: 2em;
-}
+
 
 #cajaNombre{
-    /*margin-top: 2em;*/
+    margin-top: 10%;
     display:flex;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: start;
+    padding: 2em;
+    align-items: center;
 }
 
 #cajaDescripcion{
     /*margin-top: 2em;*/
-    display: flex;
-    align-items: flex-start;
+    
+    display: flex;   
+    padding: 2em;
+    padding-left: 3.5em;
+}
+p{
+    padding: 0.5rem;
+    box-shadow: 0px 0px 11px 2px #005690;
+    border-radius: 6px;
+    margin-top: 0;
+    margin-bottom: 1rem;
+    background-color: steelblue;
 }
 
 @media only screen and (max-width: 575px){
-    #fotoPerfil{
+    #nombre{
+        margin-top: 15%;
+        font-weight: bold ;
+        font-size:1.5em;
         
-        margin-bottom: 20px;
+    }    
+    
+    
+    #acerca{
+        font-weight: bold ;
+        font-size:1.5em;
+        
+    }
+    #cajaNombre{
+        margin-top: 0%;
+        display:flex;
+        align-items:center;
+        
     }
 }
