--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,17 +1,27 @@
 <div class="row">
-    <div class="row col-xs-12 col-sm-4 col-md-4 col-lg-4" id="cajaFoto">
-        <img src="../../../assets/logos/memitaCoto1.jpeg" class="img-fluid" id="fotoPerfil">
+
+    <div class="row col-xs-12 col-sm-4 col-md-4 col-lg-4" id="cajaNombre">
+
+        
+        <h2 id="nombre">{{persona.nombre}} {{persona.apellido}}</h2>
+        <br>
+        <p >{{persona.titulo}}</p>
+        <!--p>{{persona.titulo}}</p-->
+
+        <!--button type="button" class="btn btn-light" style="max-width: 95px;text-align: start;" *ngIf="isLogged" routerLink="/editAcercaDe"><i class="bi bi-pencil"></i> Editar</button>
+        <button type="button" class="btn btn-danger" style="max-width: 95px;text-align: start;" *ngIf="isLogged" routerLink="/editAcercaDe"><i class="bi bi-backspace-fill"></i> Borrar</button-->
     </div>
-    <div class="row col-xs-12 col-sm-3 col-md-3 col-lg-3" id="cajaNombre">
+    
+    <div class="row col-xs-12 col-sm-8 col-md-8 col-lg-8" id="cajaDescripcion">
         <span>
-            <h1 id="nombre">{{persona.nombre}} {{persona.apellido}}</h1>
-            <p>Full Stack Developer Junior</p>
-        </span>        
-    </div>
-    <div class="row col-xs-12 col-sm-5 col-md-5 col-lg-5" id="cajaDescripcion">
-        <span>
-            <h2 id="descripcion">Acerca de mí</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, placeat repellendus sed velit accusantium fugit commodi voluptas animi totam, nostrum, nesciunt eum aut asperiores est officia. Repudiandae, quia? Deleniti, itaque!</p>
-        </span>       
+
+            <h2 id="acerca">Acerca de mí</h2>
+
+            <br>
+            <p>{{persona.acercaDe}}</p>
+
+            <!--<p>{{persona.acerca}}}</p>-->
+            <!--button type="button" class="btn btn-light" *ngIf="isLogged" routerLink="/editAcerca"></button-->
+        </span>
     </div>
 </div>
