--- a/src/app/components/experiencia/edit-experiencia.component.html
+++ b/src/app/components/experiencia/edit-experiencia.component.html
@@ -3,14 +3,14 @@
         <div>
             <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
                 <div class="form-group">
-                    <label for="nombreE">Nombre de la empresa</label>
+                    <label for="nombreE"><h2>Nombre de la empresa</h2></label>
                     <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="expLab.nombreE" required>  
                 </div>
 
                 <div class="row col-12"><br></div>
 
                 <div class="form-group">
-                    <label for="descripcionE">Descripcion de la tarea</label>
+                    <label for="descripcionE"><h2>Descripcion de la tarea</h2></label>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="expLab.descripcionE" required>
                 </div>
 
