--- a/src/app/components/experiencia/experiencia.component.css
+++ b/src/app/components/experiencia/experiencia.component.css
@@ -2,6 +2,12 @@
     padding: 20px;
 }
 
-div{
-    background-color: deepskyblue;
+td{
+    max-width: 35em;
+    overflow-wrap: break-word;
+    
+}
+.imgExp{
+    max-width: 120px;
+    max-height: 120px;
 }
