--- a/src/app/components/experiencia/new-experiencia.component.html
+++ b/src/app/components/experiencia/new-experiencia.component.html
@@ -1,24 +1,48 @@
 <div class="container">
     <div class="row">
         <div>
-            <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
-                <div class="form-group">
-                    <label for="nombreE">Nombre de la empresa</label>
-                    <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>  
+            <br><br>
+            <form (ngSubmit)="uploadImage()" novalidate #f="ngForm">
+                <div class="col-8 form-group">
+                    <label for="nombreE"><h2>Nombre de la empresa</h2></label>
+                    <br>
+                    <br>
+                    <input type="text" class="form-control"  name="nombreE" [(ngModel)]="nombreE" required>  
                 </div>
 
-                <div class="row col-12"><br></div>
+                <br><br><br>
 
-                <div class="form-group">
-                    <label for="descripcionE">Descripcion de la tarea</label>
+                <div class="col-8 form-group">
+                    <label for="descripcionE"><h2>Descripcion de la tarea</h2></label>
+                    <br>
+                    <br>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
                 </div>
 
-                <div class="row col-12"><br></div>
+                <br><br><br>
 
-                <button type="submit" class="btn btn-primary" >
-                    Agregar Experiencia
+                <div class="form-group">
+                    <h5>Seleccionar imagen</h5>
+                    <input type="file" accept=".png, .jpg, .jpeg" style="color:azure" (change)="onSelect($event)">
+                    
+
+                </div>
+                <input type="text" [value]="fileName" hidden="true">
+                
+                <br>
+                <br>
+                <br>
+
+                <button *ngIf="nombreE && descripcionE ; else btnDisabled" type="submit" class="btn btn-primary" (submit)="uploadImage()">
+                    <h4>Agregar Experiencia</h4>
+                    
                 </button>
+
+                <ng-template #btnDisabled>
+                    <button  type="submit" disabled="true" class="btn btn-secondary" >
+                        <h4>Agregar Experiencia</h4>                        
+                    </button>    
+                </ng-template>
 
             </form>
         </div>
