--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,13 +1,13 @@
 .row{
     padding: 20px;
-    background-color: deepskyblue;
 }
 
 footer{
     color:whitesmoke;
-    font-size: 1.5em;
+    font-size: 1em;
     display:flex;
     flex-direction: column;
     text-align: center;
-    box-shadow: 5px -5px 10px;
+    box-shadow: 5px -5px 10px #005690;
+    border-radius: 10px;
 }
