--- a/src/app/components/hys/hys.component.css
+++ b/src/app/components/hys/hys.component.css
@@ -1,12 +1,24 @@
 .row{
-    background-color: deepskyblue;
+    
     padding:20px;
 }
 
-.row div{
+
+
+h2{
     text-align: center;
 }
 
-h1{
-    text-align: center;
+.circulo{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#cajaCirculo{
+    display: flex;
+    box-shadow: 0px 0px 3px 1px;
+    border-radius: 10px;
+    background-color: steelblue;
+    flex-wrap: wrap;
 }
