--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -30,13 +30,13 @@
             
             <!-- Usuario input -->
             <div class="form-outline mb-4">
-              <input type="email" id="nombreUsuario" name="nombreUsuario" class="form-control" [(ngModel)]="nombreUsuario" name="nombreUsuario" required/>
+              <input type="email" id="nombreUsuario" name="nombreUsuario" class="form-control" [(ngModel)]="nombreUsuario" required/>
               <label class="form-label" for="nombreUsuario">Usuario</label>
             </div>
 
             <!-- Password input -->
             <div class="form-outline mb-4">
-              <input type="password" id="password" name="password" class="form-control" [(ngModel)]="password" name="password" required/>
+              <input type="password" id="password" name="password" class="form-control" [(ngModel)]="password" required/>
               <label class="form-label" for="password">Contraseña</label>
             </div>
 
