--- a/src/app/components/proyecto/proyecto.component.html
+++ b/src/app/components/proyecto/proyecto.component.html
@@ -1,13 +1,31 @@
 <div class="row">
-    <h1>Proyectos realizados</h1>
+  <div>
+    <h2>Proyectos realizados</h2>
+  </div>
+    
+    <br><br><br><br>
+    
+      
     <div class="contenedor">
-        <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8 parte1">
-            <h2>Proyecto 1</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel odio exercitationem provident, rerum sapiente possimus autem necessitatibus harum fuga nostrum! Ut soluta doloribus laudantium unde enim reprehenderit, aspernatur eligendi commodi.</p>
-        </div>
+        <table class="table table-responsive">
+          <tbody>
+              <td>
+                <h3>Portfolio Web para Argentina Programa</h3>
+                <br>
+                <p>Portfolio web desarrollado con Springboot en Angular para el curso "Argentina Programa".</p>
+              </td>
+              <td id="tdImg">
+                <a href="https://nicoportfolioweb.web.app/"><img src="../../../assets/logos/proyectoArgProg1.jpg" id="img"></a>
+          
+              </td>
+            
+            
+            
+          </tbody>
+            
+        </table>
         <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 offset-lg-1 offset-xl-1 parte2">
-            <img src="../../../assets/logos/proyecto1.jfif" class="img-fluid" id="img">
-        </div>
+            </div>
     </div>
     
 </div>
