Comentados los console.log y arreglados algunos links

--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,11 +1,13 @@
 <div class="row">
 
     <div class="row col-xs-12 col-sm-4 col-md-4 col-lg-4" id="cajaNombre">
-
-        
-        <h2 id="nombre">{{persona.nombre}} {{persona.apellido}}</h2>
+        <h2 id="nombre">Nicolás Olima</h2>
         <br>
-        <p >{{persona.titulo}}</p>
+        <p >Full Stack Web Developer Jr.</p>
+        
+        <!--h2 id="nombre">{{persona.nombre}} {{persona.apellido}}</h2>
+        <br>
+        <p >{{persona.titulo}}</p-->
         <!--p>{{persona.titulo}}</p-->
 
         <!--button type="button" class="btn btn-light" style="max-width: 95px;text-align: start;" *ngIf="isLogged" routerLink="/editAcercaDe"><i class="bi bi-pencil"></i> Editar</button>
@@ -18,7 +20,8 @@
             <h2 id="acerca">Acerca de mí</h2>
 
             <br>
-            <p>{{persona.acercaDe}}</p>
+            <p>Técnico en informática personal y profesional, Full Stack Developer Jr., actualmente presto servicio en la Policía de la Pcia. de Bs. As. con el grado de Sargento.</p>
+            <!--p>{{persona.acercaDe}}</p-->
 
             <!--<p>{{persona.acerca}}}</p>-->
             <!--button type="button" class="btn btn-light" *ngIf="isLogged" routerLink="/editAcerca"></button-->
