--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,8 +1,8 @@
 <div id="banner" class="row">
     <!--<img src="../../../assets/logos/bandera.jfif"  id="banner">-->
     <div class="row" id="cajaFoto">
-        <!--img src="../../../assets/logos/perfil.jpg" id="fotoPerfil"-->
-        <img src={{persona.url}} id="fotoPerfil">
+        <img src="../../../assets/logos/perfil.jpg" id="fotoPerfil">
+        <!--img src={{persona.url}} id="fotoPerfil"-->
     </div>
     
     
