--- a/src/app/components/logos/logos.component.html
+++ b/src/app/components/logos/logos.component.html
@@ -32,7 +32,7 @@
             </form>
             <form>
                 <input type="image" src="../../../assets/logos/linkedin.png" class="logoSocial"
-                    onclick="window.location.href='https://www.linkedin.com/in/nicol%C3%A1s-pablo-olima-46b23a269/';" />
+                    onclick="window.location.href='https://linkedin.com/in/nicolás-pablo-olima-46b23a269';" />
             </form>
             <form>
                 <input type="image" src="../../../assets/logos/github.png" class="logoSocial"
